[gd_scene load_steps=16 format=3 uid="uid://b7ery6a6lhqbh"]

[ext_resource type="Script" path="res://scripts/field.gd" id="1_h3fw7"]
[ext_resource type="PackedScene" uid="uid://br6q6m6wfk7nb" path="res://scenes/tile_map.tscn" id="2_s4lig"]
[ext_resource type="Texture2D" uid="uid://c33gusaxjpdik" path="res://assets/tilemap.png" id="2_sncb2"]
[ext_resource type="PackedScene" uid="uid://co8umhm3wlkg6" path="res://scenes/player.tscn" id="3_32rww"]
[ext_resource type="PackedScene" uid="uid://c7uugkl5xihm3" path="res://scenes/box.tscn" id="5_6qrko"]
[ext_resource type="PackedScene" uid="uid://db45ygafnt256" path="res://scenes/switch.tscn" id="6_cmqi7"]
[ext_resource type="PackedScene" uid="uid://dml3hbwqr5pn7" path="res://scenes/gate_area.tscn" id="7_45g8x"]
[ext_resource type="PackedScene" uid="uid://ba4pnybbc3j6c" path="res://scenes/key.tscn" id="7_51xgr"]
[ext_resource type="PackedScene" uid="uid://c4nmppgjp1b7m" path="res://scenes/camera_2d.tscn" id="9_5s07f"]
[ext_resource type="PackedScene" uid="uid://ce87nhojhc4ai" path="res://scenes/flag.tscn" id="10_jo1u5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btleu"]
size = Vector2(18, 114)

[sub_resource type="Animation" id="Animation_cd81x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D6:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D7:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_82cvo"]
resource_name = "keyinserted"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D6:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D7:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1kxtc"]
_data = {
"RESET": SubResource("Animation_cd81x"),
"keyinserted": SubResource("Animation_82cvo")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bj5ar"]
size = Vector2(35, 80)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h3fw7")

[node name="TileMap" parent="." instance=ExtResource("2_s4lig")]

[node name="player" parent="." instance=ExtResource("3_32rww")]
position = Vector2(100, -115)
collision_layer = 3
jumpTimeDescent = 0.2

[node name="box" parent="." instance=ExtResource("5_6qrko")]
position = Vector2(161, -2)

[node name="switch" parent="." node_paths=PackedStringArray("door") instance=ExtResource("6_cmqi7")]
position = Vector2(191, 10)
door = NodePath("../gateArea")

[node name="gateArea" parent="." instance=ExtResource("7_45g8x")]
position = Vector2(110, 10)

[node name="key" parent="." instance=ExtResource("7_51xgr")]
position = Vector2(60, 4)

[node name="key2" parent="." instance=ExtResource("7_51xgr")]
position = Vector2(34, -50)

[node name="lockedGate" type="StaticBody2D" parent="."]
position = Vector2(283, 6)

[node name="lockedGateColl" type="CollisionShape2D" parent="lockedGate"]
position = Vector2(0, -45)
shape = SubResource("RectangleShape2D_btleu")

[node name="blocks" type="Node" parent="lockedGate/lockedGateColl"]

[node name="Sprite2D" type="Sprite2D" parent="lockedGate/lockedGateColl/blocks"]
position = Vector2(283, 9)
texture = ExtResource("2_sncb2")
region_enabled = true
region_rect = Rect2(152, 19, 18, 18)

[node name="Sprite2D2" type="Sprite2D" parent="lockedGate/lockedGateColl/blocks"]
position = Vector2(283, -9)
texture = ExtResource("2_sncb2")
region_enabled = true
region_rect = Rect2(152, 19, 18, 18)

[node name="Sprite2D3" type="Sprite2D" parent="lockedGate/lockedGateColl/blocks"]
position = Vector2(283, -27)
texture = ExtResource("2_sncb2")
region_enabled = true
region_rect = Rect2(152, 19, 18, 18)

[node name="Sprite2D4" type="Sprite2D" parent="lockedGate/lockedGateColl/blocks"]
position = Vector2(301, -27)
texture = ExtResource("2_sncb2")
region_enabled = true
region_rect = Rect2(152, 19, 18, 18)

[node name="Sprite2D5" type="Sprite2D" parent="lockedGate/lockedGateColl/blocks"]
position = Vector2(319, -27)
texture = ExtResource("2_sncb2")
region_enabled = true
region_rect = Rect2(152, 19, 18, 18)

[node name="Sprite2D6" type="Sprite2D" parent="lockedGate/lockedGateColl/blocks"]
position = Vector2(319, -9)
texture = ExtResource("2_sncb2")
region_enabled = true
region_rect = Rect2(152, 19, 18, 18)

[node name="Sprite2D7" type="Sprite2D" parent="lockedGate/lockedGateColl/blocks"]
position = Vector2(319, 9)
texture = ExtResource("2_sncb2")
region_enabled = true
region_rect = Rect2(152, 19, 18, 18)

[node name="AnimationPlayer" type="AnimationPlayer" parent="lockedGate/lockedGateColl/blocks"]
libraries = {
"": SubResource("AnimationLibrary_1kxtc")
}

[node name="unlockArea" type="Area2D" parent="lockedGate"]

[node name="unlockColl" type="CollisionShape2D" parent="lockedGate/unlockArea"]
position = Vector2(-10, -28)
shape = SubResource("RectangleShape2D_bj5ar")

[node name="hintTimer" type="Timer" parent="lockedGate"]
one_shot = true

[node name="Camera2D" parent="." instance=ExtResource("9_5s07f")]
position = Vector2(174, -28)

[node name="flag" parent="." instance=ExtResource("10_jo1u5")]
position = Vector2(301, -6)

[node name="helpText" type="RichTextLabel" parent="."]
offset_left = 67.0
offset_top = 30.0
offset_right = 297.0
offset_bottom = 70.0
theme_override_colors/default_color = Color(1, 1, 1, 0)
bbcode_enabled = true
text = "[wave] I need a key to open this... [/wave]"
fit_content = true
scroll_active = false

[connection signal="area_entered" from="lockedGate/unlockArea" to="." method="_on_unlock_area_area_entered"]
[connection signal="body_entered" from="lockedGate/unlockArea" to="." method="_on_unlock_area_body_entered"]
[connection signal="timeout" from="lockedGate/hintTimer" to="." method="_on_hint_timer_timeout"]
[connection signal="body_entered" from="flag" to="." method="_on_flag_body_entered"]
